<resources>
    <string name="app_name">Bank Nagari</string>
    <string name="sign_in">Sign in</string>
    <string name="logo">logo</string>
    <string name="nik_pegawai">Nik pegawai</string>
    <string name="masukan_nik_pegawai">masukan nik pegawai</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="razitul_ikhlas">Razitul ikhlas</string>
    <string name="welcome">Welcome</string>
    <string name="lonceng">lonceng</string>
    <string name="ic_profile">ic_profile</string>
    <string name="total">Total</string>
    <string name="baki_debet">Baki debet</string>
    <string name="nilai">(Satu milyar lima ratus enam puluh tiga juta dua ratus delapan puluh tujuh ribu rupiah)</string>
    <string name="rp_1_563_287_000">Rp. 1.563.287.000</string>
    <string name="tertunda">NPL</string>
    <string name="sukses">Lancar</string>
    <string name="rp_500_juta">Rp 500 Juta</string>
    <string name="rizkhan_hadi">Rizkhan Hadi</string>
    <string name="nasabah_potensial">Nasabah Potensial</string>
    <string name="ivitems">ivItems</string>
    <string name="add">add</string>

    <string name="nama_usaha">Nama usaha</string>
    <string name="nama_pemilik">Nama pemilik</string>
    <string name="nomor_handphone">Nomor handphone</string>
    <string name="status_pinjaman">Status pinjaman</string>
    <string name="foto">Foto</string>
    <string name="todo">TODO</string>
    <string name="infromasi_usaha_nasabah">Infromasi usaha nasabah</string>
    <string name="lokasi_usaha">Lokasi usaha</string>
    <string name="simpan">Simpan</string>
    <string name="input_data_nasabah">Input data nasabah</string>
    <string name="call">Call</string>
    <string name="foto_usaha">Foto Usaha</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="platfond">Platfond</string>
    <string name="_0">0</string>
    <string name="baki_debets">Baki Debet</string>
    <string name="response_nasabah">Response nasabah</string>
    <string name="informasi_nasabah">Informasi nasabah</string>
    <string name="informasi_usaha">Informasi usaha</string>
    <string name="image">image</string>
    <string name="tambah_informasi">Tambah informasi</string>
    <string name="informasi_kunjungan">Informasi kunjungan</string>
    <string name="tambah_informasi_kunjungan">Tambah Informasi kunjungan</string>
    <string name="bunga">Bunga</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="agunan">Agunan</string>
    <string name="year">Tahun</string>
    <string name="kriteria_agunan">Kriteria Agunan</string>
    <string name="harga_pasar">Harga Pasar</string>
    <string name="tambah">Tambah</string>
    <string name="masuk">Masuk</string>
    <string name="code_tidak_diterima">code tidak diterima</string>
    <string name="kirim_ulang_kode">kirim ulang kode</string>
    <string name="verivikasi">Verivikasi</string>
    <string name="nama_debitur">Nama debitur</string>
    <string name="ktp_debitur">KTP debitur</string>
    <string name="ktp_penjamin">KTP penjamin</string>
    <string name="skim_kredit">Skim kredit</string>
    <string name="diproses">Diproses</string>
    <string name="ditolak">Ditolak</string>
    <string name="cari">Cari</string>
    <string name="title_activity_maps_usaha">MapsUsahaActivity</string>
    <string name="lokasi_anda_saat_ini">Lokasi Anda Saat ini</string>
    <string name="pilih_lokasi">Pilih lokasi</string>
    <string name="tambahkan_lokasi_usaha_debitur">Tambahkan lokasi usaha debitur</string>
    <string name="tambahkan_lokasi_rumah_debitur">Tambahkan lokasi rumah debitur</string>
</resources>