<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:weightSum="5"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="10dp"
    >
    <ImageView
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:src="@drawable/profile_nb"
        android:contentDescription="@string/image_picker_provider_authority_suffix" />
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_weight="4"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rizkhan_hadi"
            android:fontFamily="@font/poppins_regular"
            android:textSize="17sp"
            android:id="@+id/tvNameBusiness"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rp_500_juta"
            android:fontFamily="@font/poppins_bold"
            android:textSize="12sp"
            android:id="@+id/tvName"
            android:textColor="@color/blue"
            android:layout_marginStart="10dp"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.cardview.widget.CardView
        android:id="@+id/bg_kol"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#3F51B5"
        app:cardCornerRadius="10dp">

        <TextView
            android:id="@+id/tvKol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/call"
            android:textColor="@color/white" />
    </androidx.cardview.widget.CardView>
</androidx.appcompat.widget.LinearLayoutCompat>
